Secure auth with jwt and cookies

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 MONGO = mongodb+srv://noopurk:gigproject@cluster0.zs8jx17.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0&dbname=giggalaxy
+JWT_KEY = 586ab63d048ald69a43ba9js9v4959a
