--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.87.4",
     "axios": "^1.11.0",
     "infinite-react-carousel": "^1.2.11",
     "react": "^18.2.0",
